--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ds-lang",
-  "version": "0.2.2",
+  "version": "0.2.3",
+  "latest": "0.2.3",
   "description": "",
   "keywords": [
     "ds-lang",
