--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ds-lang",
   "version": "0.2.3",
   "latest": "0.2.3",
-  "description": "",
+  "description": "ds-lang",
   "keywords": [
     "ds-lang",
     "dslang"
