--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ds-lang",
-  "version": "0.5.0",
-  "latest": "0.5.0",
+  "version": "0.5.1",
+  "latest": "0.5.1",
   "description": "ds-lang",
   "keywords": [
     "ds-lang",
@@ -31,7 +31,7 @@
   "main": "./bin/dslang.js",
   "bin": {
     "dslang": "./bin/dslang.js",
-    "dsl-crystal": "./bin/dslang.js"
+    "dsl-crystal": "./bin/dsl-crystal.js"
   },
   "scripts": {
     "start": "node ./bin/dslang.js"
